# sc-extract

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
ci/: cargo-out-dir
src/: error.rs  extractors.rs  lib.rs  main.rs  utils.rs
src/extractors/: csv.rs  sc.rs  tex.rs
tests/: test_csv.rs  test_sc.rs  test_tex.rs  utils.rs
