[package]
name = "sc_extract"
version = "1.0.1"
authors = ["AriusX7 <icyligii@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A command-line tool to extract graphics and csv files from Supercell games."
homepage = "https://github.com/AriusX7/sc-extract"
repository = "https://github.com/AriusX7/sc-extract"
keywords = ["supercell", "brawlstars", "sc", "clashroyale", "clashofclans"]
categories = ["command-line-utilities"]
exclude = [
    "tests/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
byteorder = "1.3.4"
lzma-rs = "0.1.3"
image = "0.23.9"
colored = "2.0.0"
rayon = "1.4.0"
imageproc = "0.21.0"
conv = "0.3.3"
hex = "0.4.2"
